Bug 167354 - konqueror eats lots of ram (and then swap) when working with google maps
Summary: konqueror eats lots of ram (and then swap) when working with google maps
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-24 15:19 UTC by Salvatore Brigaglia
Modified: 2008-08-07 01:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Salvatore Brigaglia 2008-07-24 15:19:17 UTC
Version:           4.0.99 (using KDE 4.0.98)
Installed from:    SuSE RPMs
OS:                Linux

I am creating a .html document with multiple maps linked from google maps. When these maps are more than 3/5 and when i open other tabs for maps.google.com to find another location to add to my document ram (1GB) goes over and so does swap after a while causing the computer to be unusable. To reproduce just open several tabs on maps.google.com
Comment 1 Maksim Orlovich 2008-08-07 01:20:15 UTC
SVN commit 843323 by orlovich:

Fix the deterministic leak on websites such as google maps (and some other ones)
which also causes an assertion failure on exit.

There is still a more subtle one where the conservative collection keeps an object alive for 
a while. Happens e.g. for #164126. That one needs more thought...

CCBUG:156172
CCBUG:161289
CCBUG:151453
BUG:167354



 M  +7 -0      khtml/ecma/kjs_window.cpp  
 M  +1 -4      kjs/interpreter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=843323