Fix the deterministic leak on websites such as google maps (and some other ones) which also causes an assertion failure on exit.

There is still a more subtle one where the conservative collection keeps an object alive for 
a while. Happens e.g. for #164126. That one needs more thought...

CCBUG:156172
CCBUG:161289
CCBUG:151453
BUG:167354


svn path=/branches/KDE/4.1/kdelibs/; revision=843323