kjs/interpreter.cpp
@@ -369,10 +369,7 @@ void Interpreter::initGlobalObject()
     ErrorPrototype *errorProto = new ErrorPrototype(&m_globalExec, objProto, funcProto);
     m_ErrorPrototype = errorProto;
 
-    JSObject* o = m_globalObject;
-    while (o->prototype()->isObject())
-        o = static_cast<JSObject*>(o->prototype());
-    o->setPrototype(m_ObjectPrototype);
+    m_globalObject->setPrototype(m_ObjectPrototype);
 
     // Constructors (Object, Array, etc.)
     m_Object = new ObjectObjectImp(&m_globalExec, objProto, funcProto);
